# concept-os

./: .gitignore  README.md  concept-os.code-workspace  get-cross-compiler.sh  initialize.sh  run-qemu.sh
.devcontainer/: devcontainer.json  get-cross-compiler.sh  initialize.sh
docs/: CMakeLists.txt  index.md
docs/app-arch/: index.md  ipc.md  program-loading.md
docs/blog/: 2024-05-30.md  2024-06-09.md  2024-08-14-2.md  2024-08-14.md  2025-02-11.md  2025-02-12.md  2025-02-14.md  2025-02-17.md  2025-02-19.md
docs/core-apps/: authenticator.md  terminal-ui.md  text-mode-video.md
docs/kernel/: Readme.md  index.md  memory.md
graphics-env/: launch.sh  supervisord.conf
helloworld/: build.sh  run.sh
source/common/: CMakeLists.txt
source/common/include/: bytes.hpp  guid.hpp  linked_list.hpp  memory_stream.hpp  stream.hpp
source/common/include/ipc/: os_message.hpp  os_message_descriptor.hpp
source/common/include/memory/: shared_ptr.hpp  vector.hpp
source/common/source/ipc/: os_message.cpp  os_message_descriptor.cpp
source/common/tests/: CMakeLists.txt
source/common/tests/ipc/: os_message_tests.cpp
source/fs_library/: CMakeLists.txt
source/fs_library/tests/: CMakeLists.txt  basic_test.cpp
source/ipc/include/: ipc_connection.hpp  shared_mem.hpp
source/ipc/include/ipc/: shared_mem.hpp
source/ipc/include/memory/: shared_ptr.hpp
source/ipc/source/ipc/: os_message.cpp
source/kernel/: CMakeLists.txt  build.sh  clean.sh  kernel.cpp  string_utils.cpp  string_utils.h
source/kernel-common/: CMakeLists.txt
source/kernel-common/include/: elf_reader.hpp  os_new.hpp
source/kernel-common/include/memory/: mem_allocator.hpp
source/kernel-common/source/: CMakeLists.txt  os_new.cpp
source/kernel-common/source/memory/: mem_allocator.cpp
source/kernel-common/tests/: CMakeLists.txt  elf_reader_tests.cpp  kernel  test_globals.hpp
source/kernel-common/tests/memory/: allocator_tests.cpp  allocator_tests_2.cpp
source/kernel-loader/: CMakeLists.txt  build.sh
source/kernel-loader/include/memory/: alloc.hpp  memory_blocks.hpp  utils.h
source/kernel-loader/include/memory/x86_32/: paging.hpp
source/kernel-loader/include/x86_32/: cpu.h  globals.hpp
source/kernel-loader/source/: CMakeLists.txt  linker.ld  main.cpp
source/kernel-loader/source/memory/: alloc.cpp  utils.cpp
source/kernel-loader/source/memory/x86_32/: paging.cpp
source/kernel-loader/source/x86_32/: globals.cpp  kernel.s
source/kernel-loader/tests/:  globals.cpp  CMakeLists.txt
source/kernel-loader/tests/memory/: utils_tests.cpp
source/kernel-loader/tests/memory/x86_32/: paging_tests.cpp
source/kernel/include/: auto_delete.h  string_utils.h  terminal.h  uuid.hpp
source/kernel/include/applications/: app_instance.h
source/kernel/include/interrupts/x86_32/: idt.hpp
source/kernel/include/memory/: alloc.h  memory.h  memory_blocks.hpp  paging.hpp
source/kernel/include/memory/x86_32/: gdt.hpp  paging.hpp
source/kernel/include/x86_32/: cpu.h  globals.hpp  multiboot.h
source/kernel/source/: CMakeLists.txt  linker.ld  main.cpp  string_utils.cpp  terminal.cpp
source/kernel/source/memory/: alloc.cpp  memory.cpp  memory_blocks.cpp
source/kernel/source/memory/x86_32/: gdt.cpp  paging.cpp
source/kernel/source/x86_32/: boot.s  globals.cpp
source/kernel/tests/: CMakeLists.txt  mem_failure_pattern.txt
source/kernel/tests/interrupts/x86_32/: idt_tests.cpp
source/kernel/tests/memory/: gdt_tests.cpp  memory_blocks.cpp  paging_tests.cpp
source/kernel/tests/memory/x86_32/: gdt_tests.cpp  paging_tests.cpp
